# R1R

./: .gitignore  .replit  README.md  pyproject.toml  replit.md
RehberlikServisi1/: .replit  replit.nix
app/: __init__.py
app/api/: __init__.py  routes.py
app/blueprints/ana_sayfa/: __init__.py  routes.py
app/blueprints/anket_yonetimi/: __init__.py  models.py  routes.py  services.py
app/blueprints/cagri_merkezi/: __init__.py  models.py
app/blueprints/calisma_programi/: __init__.py  completion_calculator.py  models.py  routes.py  routes_api.py  services.py
app/blueprints/deneme_sinavlari/: __init__.py  models.py  routes.py  services.py
app/blueprints/ders_konu_yonetimi/: __init__.py  models.py  routes.py  services.py
app/blueprints/etkinlik_kayit/: __init__.py  models.py  routes.py  services.py
app/blueprints/gorusme_defteri/: __init__.py  helpers.py  models.py  routes.py  services.py
app/blueprints/ilk_kayit_formu/: __init__.py  routes.py  services.py
app/blueprints/ogrenci_yonetimi/: __init__.py  models.py  routes.py  routes.py.new  services.py
app/blueprints/parametre_yonetimi/: __init__.py  models.py  routes.py  services.py
app/blueprints/rapor_yonetimi/: __init__.py  models.py  routes.py  services.py  update_template.sh
app/blueprints/yapay_zeka_asistan/: __init__.py  models.py  routes.py  services.py
app/database/: yks_takip.db
app/extensions/: __init__.py
app/templates/: base.html  sidebar.html  student_tabs.html
app/utils/: __init__.py  auth.py  filters.py  program.py  session.py
replit_agent/: architecture.md
(+74 files in other folders)
